@startuml arch_overview
title DotBot Logistics — architecture overview

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam defaultFontName sans-serif

package "mm world  —  DotBot Controller REST API (:8000)" #FFEEEE {
    class "REST API" as API <<service>> {
        reads (GET)            : dotbots, map_size, ...
        commands (PUT/DELETE)  : waypoints, move_raw, ...
        streams (WebSocket)    : dotbots, status
    }
    note right of API : PIBT uses 3 of ~10 endpoints
}

package "conversion boundary  —  real_dotbot_pibt / sim_dotbot_pibt (drivers)" #FFF9E6 {
    class GridStateManager <<mm <-> cell>> {
        fetch_dotbots / fetch_map_size
        mm_to_cell / cell_to_mm
        resolve_conflicts
    }
    class "driver" as DRV <<module>> {
        build_pibt / run_pibt_live
        wait_until_all_arrived / send_waypoints
    }
}

package "cell world  —  simulation/" #EEF4FF {
    class "Simulation + Grid + entities" as CORE <<engine, core/>>
    class "PIBT" as PIBT <<Coordinator, algo/>>
}

API  -[#B00000]->  GridStateManager : read state (mm)
GridStateManager  -[#1E7D32]->  DRV : grid_state (cells)
DRV  ..>  CORE : build & step()
CORE  -->  PIBT : plan()
DRV  -[#B00000]->  API : send waypoints (mm)

@enduml
